feat: Refactor IncidentController to use IncidentMapper